CSS pixel alignment correction

--- a/acarshub-typescript/css/site.css
+++ b/acarshub-typescript/css/site.css
@@ -979,7 +979,7 @@ canvas {
 }
 
 #search_results {
-  width: calc(100vw - 435px);
+  width: calc(100vw - 440px);
   max-height: 100%;
   margin-left: 5px;
   overflow: auto;
